# Paintability

./: CMakeLists.txt  main  main.cpp
include/: Board.h  compare.h  helper.h
src/: Board.cpp  compare.cpp  helper.cpp
test/: CMakeLists.txt
test/unit/: board.cpp  compare.cpp
